--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "rust-auto-public-ip-update"
+description = "Auto update cloudflare dns entries when the public IP changes"
 version = "0.1.0"
 edition = "2021"
 
