--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 chrono = { version = "0.4.38", features = ["serde"] }
 clap = { version = "4.5.16", features = ["derive"] }
 colored = "2.1.0"
-dotenv = "0.15.0"
+dotenvy = "0.15.7"
 log = "0.4.22"
 public-ip = "0.2.2"
 reqwest = { version = "0.12.7", features = ["json"] }
