--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,7 +11,7 @@ env:
 jobs:
 
   docker_publish:
-    name: Build Linux
+    name: Docker Publish
     runs-on: ubuntu-latest
 
     steps:
@@ -31,4 +31,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: apollo-roboto/cfdpip:${{ github.ref_name }}
+          tags: ${{ github.repository }}:${{ github.ref_name }}
