--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,13 +14,19 @@ jobs:
     name: Docker Publish
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      - name: Login to container registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -30,5 +36,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
-          tags: ${{ github.repository }}:${{ github.ref_name }}
+          tags: ghcr.io/${{ github.repository.name }}:${{ github.ref_name }}
