--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -38,4 +38,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+          tags: ghcr.io/apollo-roboto/rust-cloudflare-dynamic-public-ip:${{ github.ref_name }}
