--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ reqwest = { version = "0.12.7", features = ["json"] }
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
 tokio = { version = "1.39.3", features = ["full"] }
+
+[dev-dependencies]
+httpmock = "0.7.0"
