--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ version = "0.1.2"
 edition = "2021"
 
 [dependencies]
+bincode = "1.3.3"
+bytes = { version = "1.7.2", features = ["serde"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 clap = { version = "4.5.16", features = ["derive"] }
 colored = "2.1.0"
@@ -12,6 +14,7 @@ dotenvy = "0.15.7"
 log = "0.4.22"
 public-ip = "0.2.2"
 reqwest = { version = "0.12.7", features = ["json"] }
+rumqttc = "0.24.0"
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
 tokio = { version = "1.39.3", features = ["full"] }
